<resources>
    <string name="app_name">OneText</string>
    <string name="record_time">Recorded on</string>
    <string name="created_time">Created on</string>
    <string name="request_permissions_text">Request Storage Permission</string>
    <string name="request_permissions_agree_button">agree</string>
    <string name="save_text">Save as a picture</string>
    <string name="save_button">Save</string>
    <string name="save_succeed">Successfully, save as</string>
    <string name="save_fail">Failed</string>
    <string name="refresh_onetext_text">Show a new sentence</string>
    <string name="refresh_onetext_button">Refresh</string>
    <string name="seal_text">Show a moe miku</string>
    <string name="seal_button_ison">Hide</string>
    <string name="seal_button_isoff">Show</string>
    <string name="title_activity_setting">Setting</string>
    <string name="font_yiqi" translatable="false">义启新宋体</string>
    <string name="font_canger" translatable="false">苍耳今楷</string>
    <string name="font_custom_text">Choose a custom font</string>
    <string name="current_font_text">Current font: </string>
    <string name="font_system_text">Restore system font</string>
    <string name="interface_text">Interface</string>
    <string name="feed_text">Feed</string>
    <string name="feed_refresh_text">Feed Refresh Time:</string>
    <string name="setting_succeed_text">Succeed, effective at next startup</string>
    <string name="succeed">Succeed</string>
    <string name="widget_text">Widget</string>
    <string name="widget_dark">Dark</string>
    <string name="widget_refresh_text">Widget Refresh Time:</string>
    <string name="widget_can_download">Allow Widget Update Feed</string>
    <string name="widget_notification_text">Push OneText</string>
    <string name="widget_notification_permissions_text">Please open the notification channel</string>
    <string name="widget_notification_next_effective_text">Effective at the widget is updated next time</string>
    <string name="default_text">Default</string>
    <string name="onetext_text_size_text">OneText Size:</string>
    <string name="onetext_by_size_text">Author Text Size:</string>
    <string name="onetext_time_size_text">Time Text Size:</string>
    <string name="onetext_from_size_text">Source Text Size:</string>
    <string name="widget_enable_text">Widget is enabled.</string>
    <string name="widget_disenable_text">Widget is disenabled.</string>
    <string name="minute">MIN</string>
    <string name="hour">H</string>
    <string name="about_text">About</string>
    <string name="about_page_text">About Page</string>
    <string name="about_page_introduction">OneText is a neat little application that can display some custom sentences through widgets on the launcher. You can also generate screenshots of sentences in the app and save or share them.
\n\n
OneText follows the LGPL license, and on this basis you can modify it.
\n\n
In the development process, we are especially grateful:
\n
[lz233](https://github.com/lz233) [XiaoMengXinX](https://github.com/XiaoMengXinX) [Kanglyh](https://github.com/kanglyh) [NekoInverter](https://github.com/NekoInverter) [RebornQ](https://github.com/RebornQ)
\n\n
The development of this project is inseparable from the following projects:
\n
[AndroidOpenSourceProject](https://source.android.com/) [MaterialDesignIcons](https://github.com/google/material-design-icons) [MicrosoftAppCenter](https://appcenter.ms) [Markwon](https://github.com/noties/Markwon) [IndicatorSeekBar](https://github.com/warkiz/IndicatorSeekBar) [Calligraphy](https://github.com/InflationX/Calligraphy) [ViewPump](https://github.com/InflationX/ViewPump) [EasyPermissions](https://github.com/googlesamples/easypermissions) [ProguardElderDictionary](https://github.com/heruoxin/proguard-elder-dictionary) [AndroidOpenCC](https://github.com/qichuan/android-opencc) [OpenCCPython](https://github.com/yichen0831/opencc-python) [NiceImageView](https://github.com/SheHuan/NiceImageView) [EasyBarrage](https://github.com/shiweibsw/EasyBarrage) [Lawnchair](https://github.com/LawnchairLauncher/Lawnchair) [BiliRoaming](https://github.com/yujincheng08/BiliRoaming) [EzXHelper](https://github.com/KyuubiRan/EzXHelper)
\n\n
The home page of this app: [Click me](https://github.com/lz233/OneText_For_Android)
\n\n
Homepage of the core library: [Click me](https://github.com/lz233/OneText-Library)
    \n\n
    About how to submit sentences to the core library: [Click me (simplified Chinese)](https://github.com/lz233/OneText-Library/wiki/Q%EF%BC%9A%E5%A6%82%E4%BD%95%E6%8F%90%E4%BA%A4%E5%8F%A5%E5%AD%90%EF%BC%9F)
    \n\n
        About how to create your own feed on Github: [Click me (simplified Chinese)](https://github.com/lz233/OneText-Library/wiki/Q%EF%BC%9A%E5%A6%82%E4%BD%95%E5%9C%A8Github%E4%B8%8A%E5%88%9B%E5%BB%BA%E8%87%AA%E5%B7%B1%E7%9A%84%E8%AE%A2%E9%98%85%E6%BA%90%EF%BC%9F)
    </string>
    <string name="interface_daynight_text">Display Mode</string>
    <string name="widget_notification_tip_text">Long press to expand or retract.</string>
    <string name="title_activity_crash_report">Crash Report</string>
    <string name="report_page_tip">Sorry, the app crashed last time. If you want, please copy the log and send an email to lz23333333@gmail.com.</string>
    <string name="report_text">Sorry, the app crashed last time.</string>
    <string name="report_button">Details</string>
    <string name="font_notification_text">Download File</string>
    <string name="font_notification_title">Downloading:</string>
    <string name="font_notification_failed">Download Failed</string>
    <string name="share_text">Share</string>
    <string name="behavior_text">Behavior</string>
    <string name="chinese_type">Chinese Type</string>
    <string name="widget_center">Center</string>
    <string name="feed_edit_text">Edit</string>
    <string name="feed_delete_text">Delete</string>
    <string name="widget_shadow">With shadow</string>
    <string name="onetext_refresh_faild_text">Update failed, please check the network.</string>
    <string name="onetext_refresh_faild_button">Retry</string>
    <string name="oauth_login_text">Login With GitHub</string>
    <string name="oauth_failed_text">Failed, please go back and try again.</string>
    <string name="oauth_logout_text">Confirm logout?</string>
    <string name="oauth_logout_button">Confirm</string>
    <string name="oauth_show_text">Oauth</string>
    <string name="delete_succeed">Delete Successfully</string>
    <string name="onetext_init_faild_text">Initialization failed, please check the network.</string>
    <string name="onetext_init_faild_button">Retry</string>
    <string name="feed_auto_update_text">Auto Update</string>
    <string name="title_activity_welcome">Welcome!</string>
    <string name="welcome_start">Start</string>
    <string name="request_permissions_storage_detail_text">Storage permission are used to save onetext pictures for sharing.\nThese pictures are saved in %s.</string>
    <string name="request_permissions_disagree_button">Disagree</string>
    <string name="request_permissions_next_time_text">You also can agree these permissions later.</string>
    <string name="welcome_widget_text">Widget</string>
    <string name="welcome_widget_button">Next</string>
    <string name="welcome_notification_text">Notification</string>
    <string name="welcome_notification_button">OK</string>
    <string name="delete_failed">Delete Failed</string>
    <string name="welcome_demo_text">Death is not the opposite of life, but forever as part of life.</string>
    <string name="welcome_demo_by">—— Haruki Murakami</string>
    <string name="font_start_download">Downloading, please check the notification bar.</string>
    <string name="oauth_login_detail">Account authentication currently has no practical effect, just for the better interface</string>
    <string name="oauth_cancel_button">Cancel</string>
    <string name="oauth_continue_button">Continue</string>
    <string name="copied">Copied</string>
    <string name="title_activity_privacy_policy">Privacy Policy And Terms</string>
    <string name="welcome_privacy_policy_title">Need to agree to the privacy policy</string>
</resources>