<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/layout_margin"
            android:layout_marginEnd="@dimen/layout_margin"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginBottom="100dp"
                android:src="@drawable/ic_account"
                android:tint="@color/colorText2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/oauth_login_text"
                android:textColor="@color/colorText3"
                android:textSize="@dimen/title_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="200dp"
                android:text="@string/oauth_login_detail"
                android:gravity="center"
                android:textColor="@color/colorText3"
                android:textSize="@dimen/text_size" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/layout_margin"
                    android:layout_weight="0"
                    app:cardCornerRadius="@dimen/cardview_radius"
                    app:cardElevation="0dp"
                    app:cardMaxElevation="0dp">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/welcome_oauth_cancel_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0"
                        android:background="@drawable/bgstyle_md2"
                        android:elevation="0dp"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:text="@string/oauth_cancel_button" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/layout_margin"
                    android:layout_weight="0"
                    app:cardCornerRadius="@dimen/cardview_radius"
                    app:cardElevation="0dp"
                    app:cardMaxElevation="0dp">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/welcome_oauth_continue_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0"
                        android:background="@drawable/bgstyle_md2"
                        android:elevation="0dp"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:text="@string/oauth_continue_button" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>